# INT4-ptq-uniform

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/classification/: convnext_tiny_clean.yaml  convnext_tiny_noisy_uniform_a0.02.yaml  mobilenetv3_large_clean.yaml  mobilenetv3_large_noisy_uniform_a0.02.yaml  resnet50_clean.yaml  resnet50_noisy_uniform_a0.02.yaml
configs/compression/: cheng2020_attention_clean.yaml  cheng2020_attention_noisy_uniform_a0.02.yaml  factorized_prior_clean.yaml  factorized_prior_noisy_uniform_a0.02.yaml  scale_hyperprior_clean.yaml  scale_hyperprior_noisy_uniform_a0.02.yaml
scripts/: _bootstrap.py  eval_fp32.py  eval_quant.py  export_master_csv.py  launch_commands.py  report_environment.py  sanity_check_data.py  sanity_check_models.py  sanity_check_noise_and_quant.py  train_classification.py  train_compression.py
scripts/slurm/: README.md  aggregate_results_share.sh  eval_fp32_classification_array_dgxh.sh  eval_fp32_compression_array_dgxh.sh  eval_quant_classification_array_dgxh.sh  eval_quant_compression_array_dgxh.sh  train_classification_array_dgxh.sh  train_compression_array_dgxh.sh
src/weight_noise_ptq/: __init__.py  eval_helpers.py  eval_runs.py
src/weight_noise_ptq/classification/: __init__.py  datasets.py  registry.py  train.py
src/weight_noise_ptq/common/: __init__.py  checkpointing.py  config.py  device_utils.py  environment.py  locked_names.py  logging_setup.py  logging_utils.py  metrics.py  noise.py  optimizers.py  paths.py  quantization.py  results_export.py  seed.py  tiny_imagenet_io.py  validators.py
(+4 files in other folders)
