[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weight-noise-ptq"
version = "0.1.0"
description = "Research experiments: training-time weight noise and post-training weight quantization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "compressai>=1.2",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["ruff>=0.1"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
